# agentjo

./: .gitignore  Advanced Tutorial 1 - Adding Hooks.ipynb  LICENSE  README.md  TaskGen Ask Me Anything.ipynb  Tutorial 0 - StrictJSON.ipynb  Tutorial 0.1 - Multimodal Inputs.ipynb  Tutorial 1 - Agent.ipynb  Tutorial 2 - Shared Variables and Global Context.ipynb  Tutorial 3 - Memory.ipynb  Tutorial 4 - Hierarchical Agents.ipynb  Tutorial 5 - CodeGen and External Function Interfacing.ipynb  Tutorial 6 - Conversation Class.ipynb  changelog.txt  myagent.pkl  pyproject.toml  requirements.txt  setup.py
Advanced Tutorials/: Advanced Tutorial - Customizing task-based execution.ipynb  Advanced Tutorial 1 - Adding Hooks.ipynb  README.md
agentjo/: __init__.py  agent.py  base_async.py  function.py  memory.py  ranker.py  utils.py  wrapper.py
agentjo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agentjo/agent_wrapper/: __init__.py  conversation.py
agentjo/memory_classes/: __init__.py  sqlite_memory.py
chroma/: chroma.sqlite3
contrib/: README.md
contrib/AgentWrapper/: ExampleWrapper.ipynb  README.md  ReflectionWrapper.ipynb  ReflectionWrapper_John.ipynb
contrib/Demo/: AgentJo_CV_Generator.ipynb  Concept_Map_And_Quiz_Creation.ipynb  FinTech Demo.ipynb  README.MD  readme.MD
contrib/Fun_AgentJo_Projects/: AlphaEvolve.ipynb  Counterfactual_Solver_Big_Bang_Theory.ipynb  Deepseek_Agentic_Usage.ipynb  Equation_Game.ipynb  Essay Writer-Movie Recommender.ipynb  Iterative_Search.ipynb  MemOS_French.pptx  PyGame_Essay_Creator.ipynb  README.md  WebBrowser.ipynb  edge_detection.ipynb  (+1 more)
db/: chroma.sqlite3
logo/: README.md
paper_reviews/: README.md
projects/: README.md
resources/: README.md
taskgen_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agentjo.py
(+41 files in other folders)
