[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agentjo"
version = "0.0.2"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "Towards Human-Friendly, Fast Learning and Adaptable Agent Communities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["openai>=1.3.6",
"langchain", "dill>=0.3.7", "termcolor>=2.3.0", "requests",
"PyPDF2", "python-docx", "pandas", "xlrd", "chromadb>=0.5.2",
"asyncio", "sentence_transformers"]

[project.urls]
Homepage = "https://github.com/tanchongmin/agentjo"
Issues = "https://github.com/tanchongmin/agentjo/issues"
