[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentjo"]

[project]
name = "agentjo"
version = "1.0.0"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "Towards Human-Friendly, Fast Learning and Adaptable Agent Communities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["strictjson >= 6.1.1", "openai>=1.3.6", "dill>=0.3.7", "termcolor>=2.3.0", "requests", "pandas", "pydantic"]

[project.optional-dependencies]
full = ["PyPDF2", "python-docx", "xlrd", "sentence_transformers"]

[project.urls]
Homepage = "https://github.com/tanchongmin/agentjo"
Issues = "https://github.com/tanchongmin/agentjo/issues"